Probably start and end dates for my MSQE degree.

--- a/SaubhikMukherjeeCV.tex
+++ b/SaubhikMukherjeeCV.tex
@@ -223,7 +223,7 @@
     \begin{cvsubsection}
       {Master of Science in Quantitative Economics}
       {\href{https://www.isical.ac.in/}{Indian Statistical Institute \linebreak Kolkata, India}}
-      {Jul 2015 - Jun 2017}
+      {Jul 20, 2015 - Jun 10, 2017}
       \begin{itemize}
         \item
           Passed in First Division with Distinction.
