--- a/SaubhikMukherjeeCV.tex
+++ b/SaubhikMukherjeeCV.tex
@@ -3,93 +3,90 @@
 \documentclass[]{mcdowellcv}
 
 \name{
-  \href{https://www.linkedin.com/in/saubhikm/} {Saubhik Mukherjee}
+  \href{https://www.linkedin.com/in/saubhikm/}{Saubhik Mukherjee} \linebreak
+  \small {AI Compiler Engineer}
 }
+
 \address{
-  1735 Woodland Ave, Apt 62 \linebreak East Palo Alto, CA 94303 \linebreak
-  United States
+  433 Jarvis Street \linebreak
+  Toronto, ON M4Y 2G9 \linebreak 
+  Canada (Permanent Resident)
 }
 \contacts{
-  +1 (470) 313-0534 \linebreak \ULurl{saubhik.mukherjee@gmail.com}
+  +1 (470) 313-0534 \linebreak 
+  \ULurl{saubhik@gatech.edu}
 }
 
 \begin{document}
-  \makeheader
+\makeheader
 
-  \begin{cvsection}{Employment}
-    \begin{cvsubsection}
-      {Senior Software Engineer \linebreak \textit{Machine Learning (ML) compiler}}
-      {\href{https://sambanova.ai/}{SambaNova Systems, Inc. \linebreak Palo Alto, CA, USA}}
-      {May 23, 2022 - Present}
-        \begin{itemize}
-          \item
-            Build \href{https://mlir.llvm.org/}{MLIR} and
-            \href{https://llvm.org/}{LLVM}-based compiler layers and
-            compiler tools to transform, optimize, debug, and execute ML
-            models on proprietary ML accelerator architectures.
-          \item
-            Build scalable and high-quality production compiler
-            infrastructure using well-established and emerging techniques
-            and push the boundaries of compiler design.
-          \item
-            Develop, maintain, and debug compiler optimization algorithms
-            on ML graphs and add compiler support for new hardware
-            architectures.
-          \item
-            Analyze and improve compile-time and run-time performance
-            across multiple AI hardware architectures and ML frameworks,
-            such as \href{https://www.tensorflow.org/}{TensorFlow} and
-            \href{https://pytorch.org/}{PyTorch}, to support new
-            state-of-the-art training and inference.
-          \item
-            Collaborate with ML researchers and engineers to guide compiler
-            development for future ML trends.
-          \item
-            \textit{Tools}: \href{https://isocpp.org/}{C++},
+\begin{cvsection}{Employment}
+  \begin{cvsubsection}
+    {Senior Software Engineer \linebreak \textit{Machine Learning (ML) compiler}}
+    {\href{https://sambanova.ai/}{SambaNova Systems, Inc. \linebreak Palo Alto, CA, USA}}
+    {May 23, 2022 - Present}
+    \begin{itemize}
+      \item
+            Built \href{https://mlir.llvm.org/}{MLIR} \&
+            \href{https://llvm.org/}{LLVM}-based compiler layers \& tools to
+            transform, optimize, debug, execute state-of-the-art AI models on
+            proprietary (non-Von Neuman, dataflow-based) ML accelerator
+            architectures; standardized compiler infrastructure to support for
+            rapid new model bringup (10 per month) with industry-leading model
+            performance
+      \item
+            Engineered and refined an embedded DSL abstracting memory \&
+            compute units, ensuring robustness and adaptability to evolving
+            accelerator architectures and emerging ML models; designed
+            optimizations to improve resource count by 5\%
+      \item
+            Analyzed \& improved compile-time \& run-time performance across
+            multiple AI hardware architectures \& ML frameworks, such as
+            \href{https://www.tensorflow.org/}{TensorFlow} \&
+            \href{https://pytorch.org/}{PyTorch}; achieved a 20\% reduction in
+            compilation time for large AI models, resulting in faster model
+            iteration \& development cycles
+            % TODO: Need more impactful points
+      \item
+            \textit{Tools}:
+            \href{https://isocpp.org/}{C++},
             \href{https://clang.llvm.org/}{Clang},
             \href{https://mlir.llvm.org/}{MLIR},
             \href{https://lldb.llvm.org/}{LLDB},
             \href{https://cmake.org/}{cmake},
+            \href{https://bazel.build/}{Bazel},
             \href{https://ninja-build.org/}{ninja},
             \href{https://gperftools.github.io/gperftools/cpuprofile.html}{gperf},
             \href{https://github.com/tmux/tmux}{tmux},
             \href{https://neovim.io/}{neovim},
             \href{https://github.com/universal-ctags/ctags}{ctags},
             \href{https://clangd.llvm.org/}{clangd},
-            \href{https://www.synopsys.com/verification/simulation/vcs.html}{Synopsys
-            VCS}.
-        \end{itemize}
-    \end{cvsubsection}
+            \href{https://www.synopsys.com/verification/simulation/vcs.html}{Synopsys VCS}
+    \end{itemize}
+  \end{cvsubsection}
 
-    \begin{cvsubsection}
-      {Software Engineer \linebreak \textit{Machine Learning (ML) systems}}
-      {\href{https://www.alpaca.markets/jp/about.html}{AlpacaJapan, Co. Ltd. \linebreak Tokyo, Japan}}
-      {Jan 1, 2019 - Jan 8, 2021}
-        \begin{itemize}
-          \item
-            Design, develop, maintain, and test live production software
-            systems for delivering stock price predictions.
-          \item
-            Collaborate with data science \& engineering team to integrate
-            different software systems and deploy and upgrade ML models in
-            live production financial forecasting software.
-          \item
-            Handle installation \& maintenance of new data sources and
-            develop the data platform used for ML model R\&D.
-          \item
-            Collect and document client requirements for future releases and
-            make extensible and robust software design decisions for
-            developing server \& client web applications; responsible for
-            10\% annual revenue growth.
-          \item
-            Manage software releases with an agile mindset and develop
-            workflows for fast production recovery in case of failures.
-          \item
-            Driving innovation by evaluating new technologies, original
-            financial data sources, and recent research papers that add value
-            to Alpaca's products.
-          \item
-            \textit{Tools}: \href{https://www.python.org/}{Python},
+  \begin{cvsubsection}
+    {Software Engineer \linebreak \textit{Machine Learning (ML) systems}}
+    {\href{https://www.alpaca.markets/jp/about.html}{AlpacaJapan, Co. Ltd. \linebreak Tokyo, Japan}}
+    {Jan 1, 2019 - Jan 8, 2021}
+    \begin{itemize}
+      \item
+            Designed, developed, maintained, \& tested production stock price
+            prediction system, leading to 20\% improvement in model depoyment
+            efficiency; developed workflows for fast production recovery
+            reducing downtime by 30\%
+      \item
+            Managed installation \& maintenance of new OHLCV data sources \&
+            developed the data platform used for ML model R\&D, resulting in
+            a 25\% reduction in data acquisition \& processing time
+      \item
+            Collected \& documented client requirements for future releases \&
+            made extensible \& robust software design decisions for developing
+            server \& client web apps, contributing to a 10\% annual revenue
+            growth
+      \item
+            \textit{Tools}:
+            \href{https://www.python.org/}{Python},
             \href{https://react.dev/}{React},
             \href{https://developer.mozilla.org/en-US/docs/Web/JavaScript}{JavaScript},
             \href{https://flask.palletsprojects.com/}{Flask},
@@ -99,71 +96,50 @@
             \href{https://kubernetes.io/}{Kubernetes},
             \href{https://www.docker.com/}{Docker},
             \href{https://pytorch.org/}{PyTorch},
-            \href{https://pandas.pydata.org/}{Pandas},
+            \href{https://p\&as.pydata.org/}{P\&as},
             \href{https://numpy.org/}{NumPy}, \href{https://scipy.org/}{SciPy},
             \href{https://github.com/spotify/luigi}{Luigi},
             \href{https://circleci.com/}{CircleCI},
             \href{https://argoproj.github.io/cd/}{Argo CD},
             \href{https://auth0.com/}{Auth0},
-            \href{https://www.datadoghq.com/}{Datadog}.
-        \end{itemize}
-    \end{cvsubsection}
+            \href{https://www.datadoghq.com/}{Datadog}
+    \end{itemize}
+  \end{cvsubsection}
 
-    \begin{cvsubsection}
-      {Data Scientist \linebreak \textit{ML in pricing research}}
-      {\href{https://www.abinbev-india.com/}{Anheuser-Busch InBev \linebreak Bangalore, India}}
-      {Jun 19, 2017 - Dec 28, 2018}
-        \begin{itemize}
-          \item
-            Develop machine learning models to estimate ABInBev's market
-            share and revenue in different pricing scenarios of beer SKUs
-            across multiple countries, using both
-            \href{https://www.r-project.org/about.html}{R} statistical
-            programming language and \href{https://www.python.org/}{Python}.
-          \item
-            Conduct extensive experiments to determine the significant
-            variables in ML models and create automated scripts to replicate
-            the process, using \href{https://keras.io/}{Keras},
-            \href{https://www.tensorflow.org/}{TensorFlow}.
-          \item
-            Create pricing conjoint survey questionnaires and handle data
-            management and pre-processing using customized scripts and
-            workflows; used \href{https://dplyr.tidyverse.org/}{dplyr},
-            \href{https://tidyr.tidyverse.org/}{tidyr}.
-          \item
-            Interact and collaborate with business heads in different
-            countries to include different pricing scenarios in conjoint
-            based on the business requirements and present the pricing
-            analysis results for business actions; used
-            \href{https://ggplot2.tidyverse.org/}{ggplot2}.
-          \item
-            Develop various optimization algorithms based on pricing analysis
-            results to maximize the business objective, such as market share
-            or revenue; used
-            \href{https://cran.r-project.org/web/packages/nloptr/}{nloptr}.
-          \item
-            Create UI dashboards that display conjoint analysis results for
-            business to gain actionable insights, using
-            \href{https://shiny.rstudio.com/}{Shiny},
-            \href{https://posit.co/}{RStudio}.
-        \end{itemize}
-    \end{cvsubsection}
-  \end{cvsection}
+  \begin{cvsubsection}
+    {Data Scientist \linebreak \textit{ML in pricing research}}
+    {\href{https://www.abinbev-india.com/}{Anheuser-Busch InBev \linebreak Bangalore, India}}
+    {Jun 19, 2017 - Dec 28, 2018}
+    \begin{itemize}
+      \item
+            Developed ML (multinomial logit, neural nets) models to estimate
+            ABInBev's market share \& revenue in different pricing scenarios of
+            beer SKUs across multiple countries, using
+            \href{https://www.r-project.org/about.html}{R} \&
+            \href{https://www.python.org/}{Python}; developed game-theoretic
+            techniques \& numerical optimization algorithms (Nelder-Mead, BFGS,
+            Simulated Annealing) based on pricing analysis results to maximize
+            business KPIs; created UI dashboards for consuming model reports,
+            using \href{https://shiny.rstudio.com/}{Shiny},
+            \href{https://posit.co/}{RStudio}
+    \end{itemize}
+  \end{cvsubsection}
+\end{cvsection}
 
-  \begin{cvsection}{Internships \& Research}
-    \begin{cvsubsection}
-      {Graduate Research Assistant \linebreak \textit{Networked Systems}}
-      {\href{https://scs.gatech.edu/}{Georgia Institute of Technology \linebreak Atlanta, GA, USA}}
-      {Aug 23, 2021 - May 7, 2022}
-        \begin{itemize}
-          \item
+\begin{cvsection}{Internships \& Research}
+  \begin{cvsubsection}
+    {Graduate Research Assistant \linebreak \textit{Networked Systems}}
+    {\href{https://scs.gatech.edu/}{Georgia Institute of Technology \linebreak Atlanta, GA, USA}}
+    {Aug 23, 2021 - May 7, 2022}
+    \begin{itemize}
+      \item
             Developed
             \href{https://github.com/saubhik/caladan/pulls}{\textit{QuicNIC}},
             a software NIC to accelerate the \href{https://quicwg.org/}{QUIC}
-            stack, to move segmentation, pacing, and encryption from the
+            stack, to move segmentation, pacing, \& encryption from the
             application to a dedicated core implementing software NIC
             functionality; achieved TCP-like single-connection throughput.
-          \item
+      \item
             Ported Meta's production QUIC (network protocol) implementation,
             \href{https://github.com/facebookincubator/mvfst}{mvfst} (\&
             dependencies \href{https://github.com/facebook/folly}{folly},
@@ -171,94 +147,62 @@
             the efficient kernel-bypass network stack (custom threading \&
             socket libraries) APIs provided by MIT's
             \href{https://www.usenix.org/conference/nsdi19/presentation/ousterhout}{Shenango}
-            (\href{https://github.com/shenango/caladan}{caladan}) and achieve
-            low tail latency \& increase CPU efficiency; involved CPU profiling
+            (\href{https://github.com/shenango/caladan}{caladan}) \& achieve low
+            tail latency \& increase CPU efficiency; involved CPU profiling
             using
             \href{https://www.brendangregg.com/FlameGraphs/cpuflamegraphs.html}{flame
-            graphs}.
-          \item
-            This
-            \href{https://drive.google.com/file/d/1-y7gsG67KGIeD2qhomVT0vTPlPB4Vep1/view?usp=sharing}{research}
-            was supervised by professors
-            \href{https://saeed.github.io/index.html}{Ahmed Saeed} and
-            \href{https://www.cc.gatech.edu/fac/Mostafa.Ammar/}{Mostafa Ammar}.
-        \end{itemize}
-    \end{cvsubsection}
+              graphs};
+            \href{https://drive.google.com/file/d/1-y7gsG67KGIeD2qhomVT0vTPlPB4Vep1/view?usp=sharing}{research
+              doc}
+    \end{itemize}
+  \end{cvsubsection}
 
-    \begin{cvsubsection}
-      {Open Source Contributor \linebreak \textit{The Linux Foundation}}
-      {\href{https://summerofcode.withgoogle.com/archive/2021/projects/4818588170452992}{Google Summer of Code}}
-      {Jun 7, 2021 - Aug 23, 2021}
-        \begin{itemize}
-          \item
-            Analyze and fix race condition bugs in the Linux Kernel 5.4 device
+  \begin{cvsubsection}
+    {Open Source Contributor \linebreak \textit{The Linux Foundation}}
+    {\href{https://summerofcode.withgoogle.com/archive/2021/projects/4818588170452992}{Google Summer of Code}}
+    {Jun 7, 2021 - Aug 23, 2021}
+    \begin{itemize}
+      \item
+            Analyze \& fix race condition bugs in the Linux Kernel 5.4 device
             drivers based on software verification static analysis tool,
             \href{https://forge.ispras.ru/projects/klever}{Klever}. Accepted
             \href{https://lore.kernel.org/lkml/?q=saubhik}{patches} to kernel
             mainline. \textit{Skills}: \href{https://www.kernel.org/}{Linux
-            kernel development}, C.
-        \end{itemize}
-    \end{cvsubsection}
-  \end{cvsection}
+              kernel development}, C.
+    \end{itemize}
+  \end{cvsubsection}
+\end{cvsection}
 
-  \begin{cvsection}{Education}
-    \begin{cvsubsection}
-      {Master of Science in Computer Science, \textit{Systems Specialization}}
-      {\href{https://www.gatech.edu/}{Georgia Institute of Technology \linebreak Atlanta, GA, USA}}
-      {Jan 6, 2020 - May 7, 2022}
-      \begin{itemize}
-        \item
-          \textit{Major}: Computer Science, \textit{Concentration}: Computing
-          Systems. \textit{Overall GPA}: 4.00.
-          \href{https://drive.google.com/file/d/1rG1vO2I3fK_aVtkboU8p6I_6vYUQBlf9/view?usp=sharing}{Transcript
-          link}.
-        \item
-          \textit{Courses}: High Performance Computer Architecture, Computer
-          Networks, Compilers \& Interpreters, Advanced Operating Systems, High
-          Performance Computing, Database Systems Concepts \& Design,
-          Distributed Computing, Introduction to Graduate Algorithms,
-          Datacenter Networks \& Systems.
-      \end{itemize}
-    \end{cvsubsection}
-    \begin{cvsubsection}
-      {Master of Science in Quantitative Economics}
-      {\href{https://www.isical.ac.in/}{Indian Statistical Institute \linebreak Kolkata, India}}
-      {Jul 20, 2015 - Jun 10, 2017}
-      \begin{itemize}
-        \item
-          Passed in First Division with Distinction.
-          \href{https://drive.google.com/file/d/1b0q9SZj-vi8_KwSI1X1aQ1qtAroeXgw0/view?usp=sharing}{Transcript
-          link}.
-        \item
-          \textit{Courses}: Microeconomics I, Game Theory I, Statistics,
-          Computer Programming and Applications, Basic Economics, Microeconomic
-          Theory II, Macroeconomic Theory I, Econometric Methods I, Time Series
-          Analysis and Forecasting, Game Theory II, Macroeconomics II,
-          Econometric Applications I, Individual and Collective Choice,
-          Political Economy, Econometric Applications II, Economic Development,
-          Bayesian Econometrics, Auction Theory, Optimization Techniques.
-      \end{itemize}
-    \end{cvsubsection}
-    \begin{cvsubsection}
-      {Bachelor of Science (Honours) in Mathematics \& Computer Science}
-      {\href{https://www.cmi.ac.in/}{Chennai Mathematical Institute \linebreak Chennai, India}}
-      {Aug 3, 2012 - Jul 25, 2015}
-      \begin{itemize}
-        \item
-          \textit{Cumulative GPA}: 06.93 (out of 10).
-          \href{https://drive.google.com/file/d/1azLzpG9HNLKuCWK21QHGjXc02za2fGW3/view?usp=sharing}{Transcript
-          link}.
-        \item
-          \textit{Courses}: Algebra I, Calculus I, Classical Mechanics I,
-          English, Introduction to Programming, Advanced Programming, Algebra
-          II, Calculus II, Discrete Mathematics, Probability Theory,
-          Environment Course, Algebra III, Calculus III, Design \& Analysis of
-          Algorithms, Real Analysis, Theory of Computation, Complex Analysis,
-          Differential Equations, Programming Language Concepts, Topology,
-          Differential Geometry, Algebra IV, Introduction to Logic, Commutative
-          Algebra, Optimization Techniques, Economics, Electrodynamics I,
-          Finance, Representation Theory.
-      \end{itemize}
-    \end{cvsubsection}
-  \end{cvsection}
+\begin{cvsection}{Education}
+  \hfill
+  \begin{itemize}
+    \item
+          \textbf{Master of Science in Computer Science \hfill Jan 2020 - May 2022}
+          \begin{itemize}
+            \item
+                  \textbf{\href{https://www.gatech.edu/}{Georgia Institute of Technology, USA}}
+            \item
+                  \textit{Major}: Computer Science, \textit{Concentration}: Computing Systems. \textit{GPA}: 4.00;
+                  \href{https://drive.google.com/file/d/1rG1vO2I3fK_aVtkboU8p6I_6vYUQBlf9/view?usp=sharing}{transcript link}.
+          \end{itemize}
+    \item
+          \textbf{Master of Science in Quantitative Economics \hfill Jul 2015 - Jun 2017}
+          \begin{itemize}
+            \item
+                  \textbf{\href{https://www.isical.ac.in/}{Indian Statistical Institute, India}}
+            \item
+                  Passed in \textit{First Division with Distinction};
+                  \href{https://drive.google.com/file/d/1b0q9SZj-vi8_KwSI1X1aQ1qtAroeXgw0/view?usp=sharing}{transcript link}
+          \end{itemize}
+    \item
+          \textbf{Bachelor of Science in Mathematics \& Computer Science \hfill Aug 2012 - Jul 2015}
+          \begin{itemize}
+            \item
+                  \textbf{\href{https://www.cmi.ac.in/}{Chennai Mathematical Institute, India}}
+            \item
+                  \textit{GPA}: 06.93 (out of 10); \href{https://drive.google.com/file/d/1azLzpG9HNLKuCWK21QHGjXc02za2fGW3/view?usp=sharing}{transcript
+                    link}.
+          \end{itemize}
+  \end{itemize}
+\end{cvsection}
 \end{document}
