Add US and CAN numbers.

--- a/SaubhikMukherjeeCV.tex
+++ b/SaubhikMukherjeeCV.tex
@@ -13,7 +13,8 @@
   Canada (Permanent Resident)
 }
 \contacts{
-  +1 (470) 313-0534 \linebreak 
+  USA: +1 (470) 313-0534 \linebreak 
+  CAN: +1 (226) 336-3865 \linebreak
   \ULurl{saubhik@gatech.edu}
 }
 
@@ -30,7 +31,7 @@
             Built \href{https://mlir.llvm.org/}{MLIR} \&
             \href{https://llvm.org/}{LLVM}-based compiler layers \& tools to
             transform, optimize, debug, execute state-of-the-art AI models on
-            proprietary (non-Von Neuman, dataflow-based) ML accelerator
+            proprietary (non-Von Neumann, dataflow-based) ML accelerator
             architectures; standardized compiler infrastructure to support for
             rapid new model bringup (10 per month) with industry-leading model
             performance
@@ -72,7 +73,7 @@
     \begin{itemize}
       \item
             Designed, developed, maintained, \& tested production stock price
-            prediction system, leading to 20\% improvement in model depoyment
+            prediction system, leading to 20\% improvement in model deployment
             efficiency; developed workflows for fast production recovery
             reducing downtime by 30\%
       \item
@@ -164,7 +165,7 @@
     \begin{itemize}
       \item
             Analyze \& fix race condition bugs in the Linux Kernel 5.4 device
-            drivers based on software verification static analysis tool,
+            drivers based on software verification static analyzer checker,
             \href{https://forge.ispras.ru/projects/klever}{Klever}. Accepted
             \href{https://lore.kernel.org/lkml/?q=saubhik}{patches} to kernel
             mainline. \textit{Skills}: \href{https://www.kernel.org/}{Linux
